# foxtrot

./: CLAUDE.md  Cargo.toml
cdt/: Cargo.toml
cdt/examples/: font.rs  fuzz.rs  locked.rs  triangulate.rs
cdt/src/: contour.rs  half.rs  hull.rs  indexes.rs  lib.rs  predicates.rs  triangulate.rs
examples/: pump_manifold.step
express/: Cargo.toml
express/examples/: gen_exp.rs  parse_exp.rs
express/src/: gen.rs  lib.rs  parse.rs
gui/: Cargo.toml
gui/src/: app.rs  backdrop.rs  backdrop.wgsl  camera.rs  main.rs  model.rs  model.wgsl
nurbs/: Cargo.toml
nurbs/src/: abstract_curve.rs  abstract_surface.rs  bspline_curve.rs  bspline_surface.rs  knot_vector.rs  lib.rs  nd_curve.rs  nd_surface.rs  nurbs_curve.rs  nurbs_surface.rs  sampled_curve.rs  sampled_surface.rs
step/: Cargo.toml
step/examples/: parse_step.rs  step_to_dot.rs
step/src/: ap214.rs  id.rs  lib.rs  parse.rs  step_file.rs
triangulate/: Cargo.toml
triangulate/examples/: step_to_stl.rs
triangulate/src/: curve.rs  lib.rs  mesh.rs  surface.rs  triangulate.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
