[package]
name = "gui"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2021"

[features]
default = [ "bundle-shaders" ]
bundle-shaders = []

[dependencies]
step = { path = "../step", features = ["parallel"] }
triangulate = { path = "../triangulate", features = ["parallel"] }

bytemuck = { version = "1", features = ["derive"] }
clap = "3"
env_logger = "0.11"
itertools = "0.13"
nalgebra-glm = "0.18.0"
pollster = "0.3"
wgpu = "0.9"
winit = "0.26.0"
