[package]
name = "triangulate"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2021"

[dependencies]
cdt = { path = "../cdt" }
nurbs = { path = "../nurbs" }
step = { path = "../step" }

log = "0.4"
nalgebra-glm = "0.18"
rayon = { version = "1.10", optional = true }
thiserror = "1.0"

[features]
parallel = ["rayon", "step/parallel"]

[dev-dependencies]
clap = "3"
env_logger = "0.11"
