[package]
name = "triangulate"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2021"

[dependencies]
cdt = { path = "../cdt" }

log = "0.4"
nalgebra-glm = "0.18"
nurbs = { path = "../nurbs" }
rayon = { version = "1.10", optional = true }
step = { path = "../step" }
thiserror = "1.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "step/rayon"]

[dev-dependencies]
clap = "3"
env_logger = "0.11"
