[package]
name = "triangulate"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2024"

[dependencies]
cdt = { path = "../cdt" }

log = "0.4"
nalgebra-glm = "0.20"
nurbs = { path = "../nurbs" }
rayon = { version = "1", optional = true }
step = { path = "../step" }
thiserror = "2"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "step/rayon"]

[dev-dependencies]
clap = "3"
env_logger = "0.11"
